Added alert to the index.html

--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 	<head>
 		<title>aravind website</title>
 	</head>
-	<body>
-		some meesg
+	<body onload="showAlert()">
+		<p>some meesg</p>
+		<script>
+		function showAlert() {
+			window.alert("Hi");
+		}
+		</script>
 	</body>
 </html>
 	
